--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,24 +28,26 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^5.0.0
+  cupertino_icons: ^1.0.8
+  dartz: ^0.10.0
   flutter:
     sdk: flutter
-  provider: ^6.1.2
+  get_it: ^7.7.0
   http: ^0.13.6
-  carousel_slider: ^5.0.0
-  lottie: ^2.7.0
-  permission_handler: ^10.4.5
+  image_picker: ^1.1.2
+  injectable: ^2.4.4
   intl: ^0.19.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  lottie: ^2.7.0
+  path: ^1.9.0
+  permission_handler: ^10.4.5
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  shimmer: ^2.0.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  device_preview: any  
+  build_runner: ^2.4.12
+  device_preview: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -53,10 +55,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  flutter_test:
+    sdk: flutter
+  injectable_generator: ^2.6.2
+  json_annotation: ^4.9.0
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -80,12 +86,11 @@ flutter:
     - assets/images/homesectionicons/Layer_1_1.png
     - assets/images/homesectionicons/Layer_1.png
     - assets/images/category.png
+    - assets/images/bgadminsplash.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
